Fix the extra white space
*Also add modal.js

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  
 }
 
 .logo {
@@ -44,6 +45,3 @@
   box-shadow: 0px 0px 18px -34px rgba(0, 0, 0, 0.59);
 }
 
-a {
-  text-decoration: none;
-}
